oops, forgot some

--- a/grid-presentational.html
+++ b/grid-presentational.html
@@ -132,7 +132,7 @@
                                         <div class="cell layout-demo">
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size1of2">
                                                             <div class="cell">
@@ -173,7 +173,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size1of3">
                                                             <div class="cell">
@@ -195,7 +195,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size2of5">
                                                             <div class="cell">
@@ -217,7 +217,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size4of5">
                                                             <div class="cell">
@@ -246,7 +246,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size4of5">
                                                             <div class="cell">
@@ -325,7 +325,7 @@
                                         <div class="cell layout-demo">
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size1of2">
                                                             <div class="cell">
@@ -370,7 +370,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size1of3 tablet-size3of4">
                                                             <div class="cell">
@@ -394,7 +394,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size2of5">
                                                             <div class="cell">
@@ -416,7 +416,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size4of5 tablet-size1of2">
                                                             <div class="cell">
@@ -447,7 +447,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="cell">
-                                                    col
+                                                    row
                                                     <div class="row">
                                                         <div class="row size4of5">
                                                             <div class="cell">
