--- a/grid-presentational.html
+++ b/grid-presentational.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" media="all"  href="assets/css/cascade/production/build-full.min.css" />
-        <link rel="stylesheet" type="text/css" media="all"  href="assets/css/site.css" />
+        <link rel="stylesheet" type="text/css" media="all"  href="assets/css/size.css" />
         <!--[if lt IE 8]><link rel="stylesheet" href="assets/css/cascade/production/icons-ie7.min.css"><![endif]-->
         <!--[if lt IE 9]><script src="assets/js/lib/polyfills/iehtmlshiv.js"></script><![endif]-->
         <title>Cascade Framework</title>
-        <meta name="description" content="Professional Frontend framework that makes building websites easier than ever.">
+        <meta name="description" content="Professional Frontend framework that makes building websizes easier than ever.">
         <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width">
         <style type="text/css">
@@ -19,11 +19,11 @@
                 margin:6px 0;
             }
 
-            .site-body .site-body {
+            .size-body .size-body {
                 margin:0;
             }
 
-            .site-body .site-footer {
+            .size-body .size-footer {
                 border-top-width: 1px;
             }
 
@@ -35,17 +35,17 @@
         </style>
     </head>
     <body class="narrow">
-        <div class="site-center">
-            <div class="site-body">
-                <div class="site-header">
-                    <div class="tags sitemenutags">
+        <div class="size-center">
+            <div class="size-body">
+                <div class="size-header">
+                    <div class="tags sizemenutags">
                         <div class="cell">
                             <ul class="nav blocks">
                                 <li class=""><a href="https://github.com/jslegers/cascadeframework/archive/master.zip" class="">Download v1.0</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="row sizefill sitemenu">
+                    <div class="row sizefill sizemenu">
                         <div class="row sizefit mobile-sizefit">
                             <div class="cell">
                                 <a href="index.html" class="logo"></a>
@@ -221,7 +221,7 @@
                                                     <div class="row">
                                                         <div class="row size4of5">
                                                             <div class="cell">
-                                                                row site4of5
+                                                                row size4of5
                                                                 <div class="row">
                                                                     <div class="row size1of2">
                                                                         <div class="cell">
@@ -250,11 +250,11 @@
                                                     <div class="row">
                                                         <div class="row size4of5">
                                                             <div class="cell">
-                                                                row site4of5
+                                                                row size4of5
                                                                 <div class="row">
                                                                     <div class="row size4of5">
                                                                         <div class="cell">
-                                                                            row site4of5
+                                                                            row size4of5
                                                                             <div class="row">
                                                                                 <div class="row size2of3">
                                                                                     <div class="cell">
@@ -420,7 +420,7 @@
                                                     <div class="row">
                                                         <div class="row size4of5 tablet-size1of2">
                                                             <div class="cell">
-                                                                row site4of5<br/>
+                                                                row size4of5<br/>
                                                                 tablet-size1of2 
                                                                 <div class="row">
                                                                     <div class="row size1of2">
@@ -451,11 +451,11 @@
                                                     <div class="row">
                                                         <div class="row size4of5">
                                                             <div class="cell">
-                                                                row site4of5
+                                                                row size4of5
                                                                 <div class="row">
                                                                     <div class="row size4of5 tablet-size2of3">
                                                                         <div class="cell">
-                                                                            row site4of5<br/>
+                                                                            row size4of5<br/>
                                                                             tablet-size2of3 
                                                                             <div class="row">
                                                                                 <div class="row size2of3 tablet-size2of5">
@@ -522,7 +522,7 @@
                                         <div class="cell">
                                             <div class="row">
                                                 <div class="cell">
-                                                    <div class="row site-header">
+                                                    <div class="row size-header">
                                                         <div class="row size4of5 float-right">
                                                             <div class="cell">
                                                                 <h2>Basic blog layout</h2>
@@ -538,13 +538,13 @@
                                                             </ul>
                                                         </div>
                                                     </div>
-                                                    <div class="site-body sizefill">
+                                                    <div class="size-body sizefill">
                                                         <div class="border-bottom">
                                                             <div class="cell">
                                                                 <h3>Cascade Framework makes webdesign easier than ever!</h3>
                                                                 <div class="row content">
                                                                     Cascade Framework is a new CSS Framework that offers you everything you need to build
-                                                                    professional cross-browser websites in no time. It's modular architecture further ... <a href="#">[ read more ]</a>
+                                                                    professional cross-browser websizes in no time. It's modular architecture further ... <a href="#">[ read more ]</a>
                                                                 </div>
                                                                 <div class="row">
                                                                     <i>Wednesday 13<sup>th</sup> march, 2013</i>
@@ -556,7 +556,7 @@
                                                                 <h3>Cascade Framework makes webdesign easier than ever!</h3>
                                                                 <div class="row content">
                                                                     Cascade Framework is a new CSS Framework that offers you everything you need to build
-                                                                    professional cross-browser websites in no time. It's modular architecture further ... <a href="#">[ read more ]</a>
+                                                                    professional cross-browser websizes in no time. It's modular architecture further ... <a href="#">[ read more ]</a>
                                                                 </div>
                                                                 <div class="row">
                                                                     <i>Wednesday 13<sup>th</sup> march, 2013</i>
@@ -568,7 +568,7 @@
                                                                 <h3>Cascade Framework makes webdesign easier than ever!</h3>
                                                                 <div class="row content">
                                                                     Cascade Framework is a new CSS Framework that offers you everything you need to build
-                                                                    professional cross-browser websites in no time. It's modular architecture further ... <a href="#">[ read more ]</a>
+                                                                    professional cross-browser websizes in no time. It's modular architecture further ... <a href="#">[ read more ]</a>
                                                                 </div>
                                                                 <div class="row">
                                                                     <i>Wednesday 13<sup>th</sup> march, 2013</i>
@@ -576,7 +576,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="site-footer">
+                                                    <div class="size-footer">
                                                         <div class="row size4of5 float-right">
                                                             <div class="cell pipes">
                                                                 <ul class="nav">
@@ -616,7 +616,7 @@
                     </div>
                 </div>
             </div>
-            <div class="site-footer">
+            <div class="size-footer">
                 <div class="cell">
                     <div id="sociallogos">
                         <a href="https://twitter.com/cascadecss"><span class="icon icon-32 icon-twitter"></span></a>
